2006-01-31  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.glade: Don't explicitly
	set the invisible_char to '*', get it from GTK+

2005-11-08  Christopher Aillon  <caillon@redhat.com>

	* configure.ac: Release 0.5

2005-11-03  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: Consolidate how we figure out the
	expiry text

2005-11-03  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: Use ngettext () where appropriate

2005-11-02  Nalin Dahyabhai <nalin@redhat.com>

	* src/krb5-auth-dialog.1.in: add a man page.

2005-11-02  Nalin Dahyabhai <nalin@redhat.com>

	* configure.ac,src/krb5-auth-dialog.c: make the minimum acceptable
	lifetime for new credentials the minimum that would force us to take
	action, not the amount of time we wait in between checks.  Let the
	check interval be defined in seconds and the minimum lifetime be
	specified in minutes.

2005-11-02  Nalin Dahyabhai <nalin@redhat.com>

	* configure.ac,src/krb5-auth-dialog.c: just test for the definitions
	of the flags directly.

2005-11-02  Nalin Dahyabhai <nalin@redhat.com>

	* etpo/lexer.l,etpo/grammar.y: silence a couple of compiler warnings
	about implicitly-declared functions.

2005-11-02  Nalin Dahyabhai <nalin@redhat.com>

	* configure.ac: test for differences between the Heimdal and MIT
	Kerberos APIs.
	* src/krb5-auth-dialog.c: abstract out differences in how credential
	flags and realm names are stored.

2005-11-01  Christopher Aillon  <caillon@redhat.com>

	* configure.ac: Release 0.4

2005-11-01  Christopher Aillon  <caillon@redhat.com>

	* Makefile.am:
	* krb5-auth-dialog.spec.in:
	* src/krb5-auth-dialog.c
	Patch from Nalin Dahyabhai <nalin@redhat.com>
	- Fix the .spec file so that it doesn't choke due to
	translations.
	- Include the .spec file in the dist tarball so that
	'rpmbuild -ts' will work.
	- Correct a compiler warning.
	- Set forwardable/proxiable/lifetime from the current ccache,
	if there is one.