@@ -2,3 +2,4 @@ Makefile
 Makefile.in
 krb5-auth-dialog
 krb5-auth-dialog.1
+krb5-auth-dialog.desktop
